2009-01-28  John W. Eaton  <jwe@octave.org>

	* Makefile.in (LIBRARIES, install, uninstall): Use SHLLIBPRE
	and SHLBINPRE library prefixes.
	From Marco Atzeri <marco_atzeri@yahoo.it>.

2009-01-28  Jaroslav Hajek  <highegg@gmail.com>

	* dMatrix.cc (Matrix::Matrix (const RowVector&)): Use shallow copy.
	(Matrix::Matrix (const ColumnVector&)): Dtto.
	(Matrix::row): Dtto.
	(Matrix::column): Dtto.

	* fMatrix.cc (FloatMatrix::FloatMatrix (const FloatRowVector&)): Use
	shallow copy.
	(FloatMatrix::FloatMatrix (const FloatColumnVector&)): Dtto.
	(FloatMatrix::row): Dtto.
	(FloatMatrix::column): Dtto.

	* CMatrix.cc (ComplexMatrix::ComplexMatrix (const ComplexRowVector&)):
	Use shallow copy.
	(ComplexMatrix::ComplexMatrix (const ComplexColumnVector&)): Dtto.
	(ComplexMatrix::row): Dtto.
	(ComplexMatrix::column): Dtto.

	* fCMatrix.cc (FloatComplexMatrix::FloatComplexMatrix (const FloatComplexRowVector&)):
	Use shallow copy.
	(FloatComplexMatrix::FloatComplexMatrix (const FloatComplexColumnVector&)): Dtto.
	(FloatComplexMatrix::row): Dtto.
	(FloatComplexMatrix::column): Dtto.

2009-01-27  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* Makefile.in (LINK_DEPS): Include ARPACK_LIBS and REGEX_LIBS in
	the list.

2009-01-27  Jaroslav Hajek  <highegg@gmail.com>

	* dbleQR.cc (QR::init): Use form. Use local buffers.
	Query for optimal block size.
	(QR::form): New function.
	* dbleQR.h: Declare it.
	* dbleQRP.cc (QRP::init):Use form. Use local buffers.
	Query for optimal block size.

	* floatQR.cc (FloatQR::init): Use form. Use local buffers.
	Query for optimal block size.
	(FloatQR::form): New function.
	* floatQR.h: Declare it.
	* floatQRP.cc (FloatQRP::init):Use form. Use local buffers.
	Query for optimal block size.

	* CmplxQR.cc (ComplexQR::init): Use form. Use local buffers.
	Query for optimal block size.
	(ComplexQR::form): New function.
	* CmplxQR.h: Declare it.
	* CmplxQRP.cc (ComplexQRP::init):Use form. Use local buffers.
	Query for optimal block size.
