@@ -61,6 +61,8 @@ public:
       return *this;
     }
 
+  bool any_element_is_nan (void) const { return false; }
+
   // FIXME -- this is not quite the right thing.
 
   boolNDArray all (int dim = -1) const;
